<resources>
    <string name="app_name">SkyLink</string>
    <string name="name_fragment_permission">Permissions</string>
    <string name="name_fragment_scan_lora_Devices">Scan LoRa WAN devices</string>
    <string name="name_fragment_lorawan_chat">LoRa WAN Chat</string>
    <string name="permissions_warning">Please grant Location and Bluetooth permissions to continue using this App.</string>
    <string name="scan_grant_permissions">Grant Permissions</string>
    <string name="none">none</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="launch_chat">Launch Chat</string>
    <string name="tap_on_a_lora_transceiver">Reset the Arduino into Pairing Mode. Tap a LoRa-BLE Transceiver to Connect</string>
    <string name="detail_image">Detail Image</string>
    <string name="default_message_outgoing">"Outgoing Message"</string>
    <string name="default_message_incoming">"Incoming Message"</string>
    <string name="default_timestamp">"12:00"</string>
    <string name="default_receiver_username">"Remote LoRaWAN device"</string>
    <string name="type_message">Type Message</string>
    <string name="send">Send</string>
    <string name="me">Me</string>
    <string name="chat_ui_image_header">Chat UI image header</string>

    <string name="while_using_the_app_button_text">While using the app</string>
    <string name="only_this_time_button_text">Only this time</string>
    <string name="dont_allow_button_text">Don\'t allow</string>
    <string name="allow_button_text">Allow</string>
    <string name="deny_button_text">Deny</string>

    <string name="connections_settings_text">Connections</string>
    <string name="bluetooth_settings_text">Bluetooth</string>
</resources>