<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/bubble_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="start"
        android:background="@color/gray_incoming_transparent">

        <TextView
            android:id="@+id/text_user_incoming"
            android:text="@string/default_receiver_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_message_incoming"
            tools:text="@string/default_message_incoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#1FFFFFFF"/>

        <TextView
            android:id="@+id/text_timestamp_incoming"
            tools:text="@string/default_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>
</layout>