<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--
    TO-DO
    <data>
        <import type="com.lora.skylink.domain.device"/>
        <variable
            name="movie"
            type="com.lora.skylink.domain.device" />
    </data>
    -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.permissions.PermissionsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutPermissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.DarkOverlay"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:contentScrim="?attr/colorPrimary"
                app:statusBarScrim="?attr/colorPrimaryVariant"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/img_header_permissions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/img_header_permissions_control"
                    tools:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/none"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_permissions"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/name_fragment_permission" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.permissions.PermissionsFragment"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/permissions_warning"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btn_grant_permissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_grant_permissions" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>