<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scan_fragment_rootview">

    <!--
    <data>
        <import type=" deandroid.bluetooth.le.ScanResult"/>
        <import type="java.util.List"/>
        <variable
            name="bluetoothdevices"
            type="List&lt;ScanResult>" />
    </data>
    -->

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".presentation.scan.ScanFragment">

        <com.google.android.material.appbar.AppBarLayout
            tools:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:theme="@style/AppTheme.DarkOverlay"
            android:fitsSystemWindows="true">
            <!--
            app:contentScrim="?attr/colorPrimary"
            -->
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:contentScrim="@color/toolbar_faded_dray"
                app:statusBarScrim="?attr/colorPrimaryVariant"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/img_header_devices_highway"
                    tools:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/detail_image"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/scan_fragment_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:title="@string/name_fragment_scan_lora_Devices" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
            <Button
                android:id="@+id/btn_scan_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="4dp"
                android:text="@string/start_scanning"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginEnd="60dp"
                android:text="@string/tap_on_a_lora_transceiver"
                android:textSize="11sp" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                tools:context=".presentation.scan.ScanFragment">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/scan_results_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="60dp"
                    tools:listitem="@layout/row_scan_result" />
                <!--
                    app:items="@{bluetoothdevices}" /> -->
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>